# accelerometer_hysteresis_runcam

./: .gitignore  CMakeLists.txt  README.md
apps/activity_detect/: main.c
apps/camera_control/: main.c
apps/hysteresis_recorder/: main.c
lib/motion/: motion_detect.c  motion_detect.h
lib/runcam/: runcam_crc.c  runcam_crc.h  runcam_uart.c  runcam_uart.h
